# proyecto-aed

./: .gitignore  CMakeLists.txt  GUIA_GUI_VentanaPrincipal.txt  GUIA_MATRIZ_DISPERSA.txt  README.md  proyecto-aed.pro
docs/: informe.tex
include/Core/: Aplicacion.h
include/EstructuraDeDatos/: MatrizDispersa.h  Nodo.h
include/GUI/: VentanaPrincipal.h
src/Core/: Aplicacion.cpp  main.cpp
src/EstructuraDeDatos/: MatrizDispersa.cpp  Nodo.cpp
src/GUI/: VentanaPrincipal.cpp
